# 2023-03-20

./: CMakeLists.txt  README.rst
exercises/: CMakeLists.txt
exercises/day1-shapes/shapes/: CMakeLists.txt  circle.h  point.h  shape.h  square.h
exercises/day1-shapes/tests/: CMakeLists.txt
hal/: CMakeLists.txt  hal-fileutil.cpp
livehacking/: CMakeLists.txt  inline.cpp  other.cpp  overloading.cpp  pass-by-ref.cpp  point-impl.cpp  point-impl.h  rodata-int.cpp  rodata.cpp  static.cpp  string-constexpr.cpp
livehacking/global-ctor/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  class.cpp  class.h  main.cpp
livehacking/intro-point/: CMakeLists.txt  inplace-inc.cpp  point-demo.cpp  point.cpp  point.h
livehacking/odr/: a.out  definition.cpp  definition.h  main.cpp
livehacking/oo/: CMakeLists.txt  oo-dtor.cpp  sensors-demo.cpp  string.cpp
sensors/: CMakeLists.txt
switches/: CMakeLists.txt  switch-sysfs.cpp  switch-sysfs.h
tests/: CMakeLists.txt
utilities/: CMakeLists.txt
